# tslang

./: .clang-format  .gitignore  CMakeLists.txt  Differences.md  README.md  conanfile.txt
docs/: CMakeLists.txt  Doxyfile.in  architecture.md  diagram_config.yaml  gen_diagrams.py  mainpage.md  parser_design.md
tsccore/: CMakeLists.txt  README.md
tsccore/test/: CMakeLists.txt  regex_tests.cpp  utf8_tests.cpp  xml_tests.cpp
tsccore/tsccore/: bigint.hpp  error.hpp  json.cpp  json.hpp  utf8.cpp  utf8.hpp  xml.cpp  xml.hpp
tsccore/tsccore/regex/: alternative.cpp  alternative.hpp  assertion.cpp  assertion.hpp  atom.cpp  atom.hpp  character_class.cpp  character_class.hpp  disjunction.cpp  disjunction.hpp  error.cpp  error.hpp  group.cpp  group.hpp  quantifier.cpp  quantifier.hpp  regular_expression.cpp  regular_expression.hpp  scan_regex.cpp  scan_regex.hpp  scanner.cpp  scanner.hpp
tscctypes/: CMakeLists.txt  README.md
tscctypes/tscctypes/: error.hpp
tsclex/: CMakeLists.txt  Encoding.md  README.md
tsclex/test/: CMakeLists.txt  comment_edge_cases_tests.cpp  decorators_tests.cpp  fake_source.cpp  fake_source.hpp  jsx_tests.cpp  keywords_additional_tests.cpp  keywords_tests.cpp  lambdas_tests.cpp  lexer_tests.cpp  literals_tests.cpp  multi_line_comment_tests.cpp  operators_tests.cpp  punctuation_tests.cpp  regex_tests.cpp  shebang_tests.cpp  single_line_comment_tests.cpp  string_escape_tests.cpp  template_literals_tests.cpp  test_common.hpp  typescript_extensions_tests.cpp  utf8_handling_tests.cpp
tsclex/tsclex/: error.hpp  lexer.cpp  lexer.hpp  source.cpp  source.hpp  source_location.cpp  source_location.hpp  token.cpp  token.hpp
tsclex/tsclex/detail/: all_tokens.ipp
tsclex/tsclex/error/: conflicting_regex_flags.cpp  conflicting_regex_flags.hpp  duplicate_regex_flag.cpp  duplicate_regex_flag.hpp  expected_command.cpp  expected_command.hpp  hexadecimal_digit_expected.cpp  hexadecimal_digit_expected.hpp  hexidecimal_digit_expected.cpp  hexidecimal_digit_expected.hpp  invalid_character.cpp  invalid_character.hpp  invalid_identifier.cpp  invalid_identifier.hpp  misplaced_shebang.cpp  misplaced_shebang.hpp  multiple_consecutive_numeric_separators_are_not_permitted.cpp  multiple_consecutive_numeric_separators_are_not_permitted.hpp  multiple_separators_not_allowed.cpp  multiple_separators_not_allowed.hpp  no_jsx_closing_tag.cpp  no_jsx_closing_tag.hpp  numeric_separators_are_not_allowed_here.cpp  numeric_separators_are_not_allowed_here.hpp  premature_end_of_file.cpp  premature_end_of_file.hpp  regex_flag_unavailable.cpp  regex_flag_unavailable.hpp  separators_not_allowed_here.cpp  separators_not_allowed_here.hpp  unexpected_end_of_text.cpp  unexpected_end_of_text.hpp  unexpected_token.cpp  unexpected_token.hpp  unicode_value_out_of_range.cpp  unicode_value_out_of_range.hpp  unknown_regex_flag.cpp  unknown_regex_flag.hpp  unterminated_multiline_comment.cpp  unterminated_multiline_comment.hpp  (+4 more)
tsclex/tsclex/private/: unicode_tables.cpp  unicode_tables.hpp
tsclex/tsclex/tokens/: abstract_token.cpp  abstract_token.hpp  accessor_token.cpp  accessor_token.hpp  ampersand_eq_token.cpp  ampersand_eq_token.hpp  ampersand_token.cpp  ampersand_token.hpp  any_token.cpp  any_token.hpp  as_token.cpp  as_token.hpp  assert_token.cpp  assert_token.hpp  asserts_token.cpp  asserts_token.hpp  asterisk_eq_token.cpp  asterisk_eq_token.hpp  asterisk_token.cpp  asterisk_token.hpp  async_token.cpp  async_token.hpp  at_token.cpp  at_token.hpp  await_token.cpp  await_token.hpp  bar_eq_token.cpp  bar_eq_token.hpp  bar_token.cpp  bar_token.hpp  basic_token.cpp  basic_token.hpp  bigint_token.cpp  bigint_token.hpp  boolean_token.cpp  boolean_token.hpp  break_token.cpp  break_token.hpp  caret_eq_token.cpp  caret_eq_token.hpp  (+294 more)
tscparse/: CMakeLists.txt
tscparse/test/: CMakeLists.txt  declare_tests.cpp  export_tests.cpp  import_tests.cpp  namespace_tests.cpp  parser_tests.cpp  test_helpers.hpp  transition_listener.cpp  transition_logger.cpp  transition_logger.hpp  type_tests.cpp
tscparse/tscparse/: error.cpp  error.hpp  filtered_token_index.hpp  parser.cpp  parser.hpp  parser_observer.hpp  trivia_index.hpp
tscparse/tscparse/ast/: ast_node.hpp  declare_module_node.cpp  declare_module_node.hpp  export_assignment_node.cpp  export_assignment_node.hpp  export_star_node.cpp  export_star_node.hpp  exportable_node.cpp  exportable_node.hpp  import_node.cpp  import_node.hpp  lexeme.hpp  lexeme_visitors.ipp  module_node.cpp  module_node.hpp  named_export_node.cpp  named_export_node.hpp  named_specifier.cpp  named_specifier.hpp  namespace_node.cpp  namespace_node.hpp  qualified_name.cpp  qualified_name.hpp  source_file_node.cpp  source_file_node.hpp  type_node.cpp  type_node.hpp
tscparse/tscparse/ast/type/: array_type_node.cpp  array_type_node.hpp  intersection_type_node.cpp  intersection_type_node.hpp  keyword_type_node.cpp  keyword_type_node.hpp  literal_type_node.cpp  literal_type_node.hpp  this_type_node.cpp  this_type_node.hpp  type_alias_node.cpp  type_alias_node.hpp  type_context.hpp  type_definition.hpp  type_parameter_node.cpp  type_parameter_node.hpp  (+4 more)
tscparse/tscparse/error/: declaration_or_statement_expected.cpp  declaration_or_statement_expected.hpp  declare_in_ambient_context.cpp  declare_in_ambient_context.hpp  duplicate_default_export.cpp  duplicate_default_export.hpp  expected_token.cpp  expected_token.hpp  export_assignment_conflicts.cpp  export_assignment_conflicts.hpp  export_assignment_not_at_top_level.cpp  export_assignment_not_at_top_level.hpp  export_default_not_at_top_level.cpp  export_default_not_at_top_level.hpp  unexpected_end_of_text.cpp  unexpected_end_of_text.hpp
tscparse/tscparse/state/: declare_state.cpp  declare_state.hpp  export_state.cpp  export_state.hpp  import_state.cpp  import_state.hpp  module_scope_state.cpp  module_scope_state.hpp  module_scope_visitor.hpp  multiline_state.cpp  multiline_state.hpp  namespace_state.cpp  namespace_state.hpp  parser_state.cpp  parser_state.hpp  state_result.cpp  state_result.hpp  token_helpers.hpp  type_state.cpp  type_state.hpp
(+74 files in other folders)
